Resolved issue with `logout` button on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -137,5 +137,6 @@ button:hover {
   .logout {
     bottom: 25px;
     right: 5px;
+    height: fit-content;
   }
 }
